Updated application name in the pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.learner</groupId>
-    <artifactId>i27-user</artifactId>
+    <artifactId>eureka-users</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>i27-user</name>
+    <name>eureka-users</name>
     <description>A microservice for User management</description>
     <properties>
         <java.version>17</java.version>
